--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta neNe="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="уникальных.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
