--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="hedar">
         <a name="plan"></a>
-        <img src="C:\Users\u19l0\OneDrive\Рабочий стол\ДЗ\BackgroundEraser_20230322_091753921.png" alt="растение" class="plan">
+        <img src="BackgroundEraser_20230322_091753921.png" alt="растение" class="plan">
         <h1>ТОП 10-Уникальных растений</h1>
         <a href="https://vk.com/sadoviyrai"><img src="https://www.gidvtarragone.com/sites/default/files/img_info/vk-logo.png" alt="" class="WK"></a>
         <a href="https://instagram.com/mechta_o_sade?igshid=YmMyMTA2M2Y="><img src="https://i.pinimg.com/originals/58/82/64/588264e29f37aa40afd379eeff9e3194.png" alt="" class="unsta"></a>
